# external-adapters-js

./: .depcheckrc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .pnp.cjs  .pnp.js  .prettierignore  .prettierrc.js  .tool-versions  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  DEPENDABOT_CHALLENGE.md  Dockerfile  Dockerfile-2Step  Dockerfile-MarketClosure  Dockerfile-PoR  Dockerfile-SynthIndex  Dockerfile.streams-adapter  Dockerfile.with-proxy  LICENSE  MASTERLIST.md  Makefile  NetDania-License.txt  README.md  RELEASES.yaml  app.js  babel.config.js  bootstrappable.Dockerfile  build-with-proxy.sh  codecov.yml  hardhat.config.js  hardhat.config.ts  index.js  jest.config.js  jest.config.ts  market-status.js  new.sh  package-lock.json  (+17 more)
ea-agent/: README.md  pyproject.toml
ea-agent/ea-requirements/: example-ea-spec.yaml  template.yaml
ea-agent/ea-template/src/config/: index.ts  overrides.json
ea-agent/ea-template/src/transport/: lwba-http.ts  lwba-ws.ts  price-http.ts  reserve-http.ts  reserve-ws.ts
ea-agent/ea-template/test/integration/: adapter-custom-bg.test.ts  adapter.test.ts
ea-agent/ea-template/test/unit/: utils.test.ts
ea-agent/examples/: example-yaml-spec-OPDATA-4790.yaml  yaml-spec-template.yaml.template
ea-agent/package-template/src/endpoint/: index.ts  lwba.ts  nav.ts  price.ts  reserve.ts
ea-agent/package-template/src/transport/: lwba-custombg.ts  lwba-customfg.ts  lwba-ws.ts  (+12 more)
ea-agent/requests/: .gitkeep  OPDATA-4777.yaml  OPDATA-4790.yaml  OPDATA-5784.yaml
ea-agent/scripts/: setup-ea-env.sh
ea-agent/src/: agent.py  source_ea_agent.py
(+3615 files in other folders)
