[project]
name = "ea-scaffolding-agent"
version = "0.1.0"
description = "AI agent to scaffold the EA according to the yaml config input"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk>=0.1.10",
  "pydantic>=2.0.0",
  "pytest>=8.4.2",
  "pyyaml>=6.0",
  "jsonschema>=4.0.0",
  "specify-cli",
  # Security fixes for transitive dependencies
  "mcp>=1.23.0",  # CVE-2025-66416: DNS rebinding protection
  "starlette>=0.49.1",  # CVE-2025-62727: Range header DoS fix
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
specify-cli = { git = "https://github.com/github/spec-kit.git" }
